--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ header,
 footer {
   background-color: #333;
   color: white;
-  padding: 10px 0;
+  padding: 0.4rem;
   text-align: center;
 }
 
@@ -30,30 +30,49 @@ nav ul li a {
 
 .hero {
   text-align: center;
-  background: url('/path/to/hero-image.jpg') no-repeat center center;
+  /* background: url('/path/to/hero-image.jpg') no-repeat center center; */
   background-size: cover;
   color: rgb(4, 4, 4);
-  padding: 100px 20px;
+}
+
+.hero img {
+  width: 100%;
+  height: 310px;
+  background-size: cover;
+  object-fit: cover;
+  object-position: 50% 40%;
 }
 
 .hero h1 {
   font-size: 48px;
+
 }
 
 .features {
   display: flex;
   justify-content: space-around;
-  padding: 20px;
+  padding: 100px;
 }
 
 .feature {
   flex: 1;
   text-align: center;
-  margin: 0 10px;
+  margin-top: -100px;
+  color: blue;
 }
 
 .feature h2 {
   font-size: 24px;
+}
+
+footer {
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 footer .social-media a {
