--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -29,4 +29,4 @@ footer {
   position: fixed;
   width: 100%;
   bottom: 0;
-}
+} */
